# budgie-systemmonitor-applet

./: README.md  meson.build
data/: SysMonitorApplet.plugin  com.github.dirli.budgie-sys-monitor-applet.gschema.xml  meson.build
icons/: meson.build
meson/: meson_post_install.py
po/: budgie-sys-monitor-applet.pot  ru.po
schema/: com.prateekmedia.systemmonitor.gschema.xml
src/: SysMonitorApplet.plugin  SysMonitorApplet.vala  Utils.vala  meson.build
src/Providers/: CPU.vala  Memory.vala  Net.vala  Uptime.vala
src/Widgets/: MainView.vala  Popover.vala  SettingsView.vala
